--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fighting Game</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div style="position: relative; display: inline-block;">
-		<div style="position: absolute; display: flex; width: 100%; justify-content: center; align-items: center;">
+	<div class="container">
+		<div class="hp-interface">
 			<!-- Player health -->
-			<div style="background-color: yellow; height: 30px; width: 100%;"></div>
+			<div class="player-hp"></div>
 			<!-- Timer -->
-			<div style="background-color: red; width: 100px; height: 100px; flex-shrink: 0;"></div>
+			<div class="timer"></div>
 			<!-- Enemy Health -->
-			<div style="background-color: yellow; height: 30px; width: 100%;"></div>
+			<div class="enemy-hp"></div>
 		</div>
 		<canvas></canvas>
 	</div>
