Update enemy hp interface on hit.
Make a blue bg div on top of yellow bg div to indicate current hp,
staying relative to container div.
Make enemy healthbar reduce on hit.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 			<!-- Timer -->
 			<div class="timer"></div>
 			<!-- Enemy Health -->
-			<div class="enemy-hp"></div>
+			<div style="position: relative; height: 30px; width: 100%;">
+				<div class="enemy-hp"></div>
+				<div id="enemy-bar" style=></div>
+			</div>
 		</div>
 		<canvas></canvas>
 	</div>
