Finish enemy hp interferenca. Add it to player too
reduce players hp for a certian amount when hit.
reverse players hp bar with flex to make it go from left to right.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 	<div class="container">
 		<div class="hp-interface">
 			<!-- Player health -->
-			<div class="player-hp"></div>
+			<div class="player">
+				<div class="player-hp"></div>
+				<div id="player-bar"></div>
+			</div>
+			
 			<!-- Timer -->
 			<div class="timer"></div>
 			<!-- Enemy Health -->
-			<div style="position: relative; height: 30px; width: 100%;">
+			<div class="enemy">
 				<div class="enemy-hp"></div>
-				<div id="enemy-bar" style=></div>
+				<div id="enemy-bar"></div>
 			</div>
 		</div>
 		<canvas></canvas>
