Add display-text div to show winner/loser/tie
style it to go to center of screen.
add determineWinner function to check who wins and then
display it

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<div id="enemy-bar"></div>
 			</div>
 		</div>
+		<div id="display-text"></div>
 		<canvas></canvas>
 	</div>
 	<script src="app.js"></script>
