Change Sprite class to Fighter. Add Sprite class
Add both classes to separate classes.js file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<div id="display-text"></div>
 		<canvas></canvas>
 	</div>
+	<script src="js/classes.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
