--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fighting Game</title>
-	<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-	<div class="container">
-		<div class="hp-interface">
-			<!-- Player health -->
-			<div class="player">
-				<div class="player-hp"></div>
-				<div id="player-bar"></div>
-			</div>
-			<!-- Timer -->
-			<div class="timer"></div>
-			<!-- Enemy Health -->
-			<div class="enemy">
-				<div class="enemy-hp"></div>
-				<div id="enemy-bar"></div>
-			</div>
-		</div>
-		<div id="display-text"></div>
-		<canvas></canvas>
-	</div>
-	<script src="js/utils.js"></script>
-	<script src="js/classes.js"></script>
-	<script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fighting Game</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="hp-interface">
+        <!-- Player health -->
+        <div class="player">
+          <div class="player-hp"></div>
+          <div id="player-bar"></div>
+        </div>
+        <!-- Timer -->
+        <div class="timer"></div>
+        <!-- Enemy Health -->
+        <div class="enemy">
+          <div class="enemy-hp"></div>
+          <div id="enemy-bar"></div>
+        </div>
+      </div>
+      <div id="display-text"></div>
+      <canvas></canvas>
+    </div>
+    <script src="js/utils.js"></script>
+    <script src="js/classes.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
