--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div>TEST</div>
     <div class="container">
       <div class="hp-interface">
         <!-- Player health -->
